Update default configurations

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Busybox version: 1.27.0.git
-# Mon May 29 14:39:07 2017
+# Busybox version: 1.28.0.git
+# Tue Jul 18 16:04:43 2017
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -13,27 +13,29 @@ CONFIG_PLATFORM_MINGW32=y
 CONFIG_DESKTOP=y
 # CONFIG_EXTRA_COMPAT is not set
 # CONFIG_INCLUDE_SUSv2 is not set
-CONFIG_USE_PORTABLE_CODE=y
+CONFIG_LONG_OPTS=y
 CONFIG_SHOW_USAGE=y
 CONFIG_FEATURE_VERBOSE_USAGE=y
 CONFIG_FEATURE_COMPRESS_USAGE=y
-CONFIG_BUSYBOX=y
-CONFIG_FEATURE_INSTALLER=y
-# CONFIG_INSTALL_NO_USR is not set
+CONFIG_LFS=y
+# CONFIG_GLOBBING is not set
+# CONFIG_SAFE_ENV is not set
 # CONFIG_PAM is not set
-CONFIG_LONG_OPTS=y
 # CONFIG_FEATURE_DEVPTS is not set
-# CONFIG_FEATURE_CLEAN_UP is not set
 # CONFIG_FEATURE_UTMP is not set
 # CONFIG_FEATURE_WTMP is not set
 # CONFIG_FEATURE_PIDFILE is not set
 CONFIG_PID_FILE_PATH=""
+CONFIG_BUSYBOX=y
+CONFIG_FEATURE_INSTALLER=y
+# CONFIG_INSTALL_NO_USR is not set
 # CONFIG_FEATURE_SUID is not set
 # CONFIG_FEATURE_SUID_CONFIG is not set
 # CONFIG_FEATURE_SUID_CONFIG_QUIET is not set
-# CONFIG_SELINUX is not set
 CONFIG_FEATURE_PREFER_APPLETS=y
 CONFIG_BUSYBOX_EXEC_PATH=""
+# CONFIG_SELINUX is not set
+# CONFIG_FEATURE_CLEAN_UP is not set
 # CONFIG_FEATURE_SYSLOG is not set
 # CONFIG_FEATURE_HAVE_RPC is not set
 # CONFIG_PLATFORM_LINUX is not set
@@ -45,16 +47,15 @@ CONFIG_BUSYBOX_EXEC_PATH=""
 # CONFIG_PIE is not set
 # CONFIG_NOMMU is not set
 # CONFIG_BUILD_LIBBUSYBOX is not set
+# CONFIG_FEATURE_LIBBUSYBOX_STATIC is not set
 # CONFIG_FEATURE_INDIVIDUAL is not set
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
-CONFIG_LFS=y
-# CONFIG_GLOBBING is not set
-# CONFIG_SAFE_ENV is not set
 CONFIG_CROSS_COMPILER_PREFIX="i686-w64-mingw32-"
 CONFIG_SYSROOT=""
 CONFIG_EXTRA_CFLAGS=""
 CONFIG_EXTRA_LDFLAGS=""
 CONFIG_EXTRA_LDLIBS=""
+CONFIG_USE_PORTABLE_CODE=y
 
 #
 # Installation Options ("make install" behavior)
@@ -81,7 +82,7 @@ CONFIG_NO_DEBUG_LIB=y
 # CONFIG_EFENCE is not set
 
 #
-# Busybox Library Tuning
+# Library Tuning
 #
 # CONFIG_FEATURE_USE_BSS_TAIL is not set
 CONFIG_FEATURE_RTMINMAX=y
@@ -193,6 +194,7 @@ CONFIG_FEATURE_UNZIP_XZ=y
 #
 CONFIG_BASENAME=y
 CONFIG_CAT=y
+CONFIG_FEATURE_CATN=y
 CONFIG_FEATURE_CATV=y
 # CONFIG_CHGRP is not set
 CONFIG_CHMOD=y
@@ -324,6 +326,7 @@ CONFIG_TRUNCATE=y
 # CONFIG_TTY is not set
 CONFIG_UNAME=y
 CONFIG_UNAME_OSNAME="MS/Windows"
+CONFIG_BBARCH=y
 CONFIG_UNIQ=y
 CONFIG_UNLINK=y
 CONFIG_USLEEP=y
@@ -661,6 +664,10 @@ CONFIG_REV=y
 # CONFIG_SETARCH is not set
 # CONFIG_LINUX32 is not set
 # CONFIG_LINUX64 is not set
+# CONFIG_SETPRIV is not set
+# CONFIG_FEATURE_SETPRIV_DUMP is not set
+# CONFIG_FEATURE_SETPRIV_CAPABILITIES is not set
+# CONFIG_FEATURE_SETPRIV_CAPABILITY_NAMES is not set
 # CONFIG_SETSID is not set
 # CONFIG_SWAPON is not set
 # CONFIG_FEATURE_SWAPON_DISCARD is not set
@@ -723,6 +730,7 @@ CONFIG_FEATURE_BEEP_LENGTH_MS=0
 # CONFIG_CROND is not set
 # CONFIG_FEATURE_CROND_D is not set
 # CONFIG_FEATURE_CROND_CALL_SENDMAIL is not set
+# CONFIG_FEATURE_CROND_SPECIAL_TIMES is not set
 CONFIG_FEATURE_CROND_DIR=""
 # CONFIG_CRONTAB is not set
 CONFIG_DC=y
@@ -922,6 +930,9 @@ CONFIG_FEATURE_WGET_LONG_OPTIONS=y
 CONFIG_WHOIS=y
 # CONFIG_ZCIP is not set
 # CONFIG_UDHCPC6 is not set
+# CONFIG_FEATURE_UDHCPC6_RFC3646 is not set
+# CONFIG_FEATURE_UDHCPC6_RFC4704 is not set
+# CONFIG_FEATURE_UDHCPC6_RFC4833 is not set
 # CONFIG_UDHCPD is not set
 # CONFIG_FEATURE_UDHCPD_WRITE_LEASES_EARLY is not set
 # CONFIG_FEATURE_UDHCPD_BASE_IP_ON_MAC is not set
@@ -1078,6 +1089,7 @@ CONFIG_ASH_NOCONSOLE=y
 # CONFIG_HUSH_HELP is not set
 # CONFIG_HUSH_EXPORT is not set
 # CONFIG_HUSH_EXPORT_N is not set
+# CONFIG_HUSH_READONLY is not set
 # CONFIG_HUSH_KILL is not set
 # CONFIG_HUSH_WAIT is not set
 # CONFIG_HUSH_TRAP is not set
@@ -1088,7 +1100,6 @@ CONFIG_ASH_NOCONSOLE=y
 # CONFIG_HUSH_ULIMIT is not set
 # CONFIG_HUSH_UMASK is not set
 # CONFIG_HUSH_MEMLEAK is not set
-# CONFIG_MSH is not set
 
 #
 # Options common to all shells
