Post-merge fixes

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.28.0.git
-# Tue Jul 18 16:04:43 2017
+# Mon Jul 24 11:51:22 2017
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -149,7 +149,6 @@ CONFIG_BZCAT=y
 CONFIG_UNLZMA=y
 CONFIG_LZCAT=y
 CONFIG_LZMA=y
-CONFIG_FEATURE_LZMA_FAST=y
 CONFIG_UNXZ=y
 CONFIG_XZCAT=y
 CONFIG_XZ=y
@@ -188,6 +187,7 @@ CONFIG_FEATURE_UNZIP_CDF=y
 CONFIG_FEATURE_UNZIP_BZIP2=y
 CONFIG_FEATURE_UNZIP_LZMA=y
 CONFIG_FEATURE_UNZIP_XZ=y
+CONFIG_FEATURE_LZMA_FAST=y
 
 #
 # Coreutils
@@ -326,7 +326,7 @@ CONFIG_TRUNCATE=y
 # CONFIG_TTY is not set
 CONFIG_UNAME=y
 CONFIG_UNAME_OSNAME="MS/Windows"
-CONFIG_BBARCH=y
+CONFIG_BB_ARCH=y
 CONFIG_UNIQ=y
 CONFIG_UNLINK=y
 CONFIG_USLEEP=y
@@ -1109,6 +1109,7 @@ CONFIG_FEATURE_SH_MATH_64=y
 CONFIG_FEATURE_SH_EXTRA_QUIET=y
 CONFIG_FEATURE_SH_STANDALONE=y
 CONFIG_FEATURE_SH_NOFORK=y
+# CONFIG_FEATURE_SH_READ_FRAC is not set
 CONFIG_FEATURE_SH_HISTFILESIZE=y
 
 #
