--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -1008,7 +1008,7 @@ CONFIG_PS=y
 # CONFIG_FEATURE_TOPMEM is not set
 # CONFIG_UPTIME is not set
 # CONFIG_FEATURE_UPTIME_UTMP_SUPPORT is not set
-# CONFIG_WATCH is not set
+CONFIG_WATCH=y
 # CONFIG_FEATURE_SHOW_THREADS is not set
 
 #
