--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -168,7 +168,7 @@ CONFIG_LZOP=y
 CONFIG_UNLZOP=y
 CONFIG_LZOPCAT=y
 # CONFIG_LZOP_COMPR_HIGH is not set
-# CONFIG_RPM is not set
+CONFIG_RPM=y
 CONFIG_RPM2CPIO=y
 CONFIG_TAR=y
 CONFIG_FEATURE_TAR_LONG_OPTIONS=y
