cpio: disable pass-through mode (-p) in default configuration
Pass-through mode never worked:  it uses fork().

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -156,7 +156,7 @@ CONFIG_BZIP2=y
 CONFIG_FEATURE_BZIP2_DECOMPRESS=y
 CONFIG_CPIO=y
 CONFIG_FEATURE_CPIO_O=y
-CONFIG_FEATURE_CPIO_P=y
+# CONFIG_FEATURE_CPIO_P is not set
 # CONFIG_DPKG is not set
 CONFIG_DPKG_DEB=y
 CONFIG_GZIP=y
