--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -156,7 +156,7 @@ CONFIG_BZIP2=y
 CONFIG_FEATURE_BZIP2_DECOMPRESS=y
 CONFIG_CPIO=y
 CONFIG_FEATURE_CPIO_O=y
-CONFIG_FEATURE_CPIO_P=y
+# CONFIG_FEATURE_CPIO_P is not set
 # CONFIG_DPKG is not set
 CONFIG_DPKG_DEB=y
 CONFIG_GZIP=y
