--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -991,7 +991,7 @@ CONFIG_FEATURE_PIDOF_OMIT=y
 CONFIG_PS=y
 # CONFIG_FEATURE_PS_WIDE is not set
 # CONFIG_FEATURE_PS_LONG is not set
-# CONFIG_FEATURE_PS_TIME is not set
+CONFIG_FEATURE_PS_TIME=y
 # CONFIG_FEATURE_PS_UNUSUAL_SYSTEMS is not set
 # CONFIG_FEATURE_PS_ADDITIONAL_COLUMNS is not set
 # CONFIG_PSTREE is not set
