shred: fix up for WIN32 and enable by default
Use the new low-level support for /dev/zero and /dev/urandom to
allow shred to work in busybox-w32.

The only change required is to close the file before unlinking it,
as Microsoft Windows won't delete an open file.

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -283,7 +283,7 @@ CONFIG_PWD=y
 CONFIG_RM=y
 CONFIG_RMDIR=y
 CONFIG_SEQ=y
-# CONFIG_SHRED is not set
+CONFIG_SHRED=y
 CONFIG_SHUF=y
 CONFIG_SLEEP=y
 CONFIG_FEATURE_FANCY_SLEEP=y
