--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -283,7 +283,7 @@ CONFIG_PWD=y
 CONFIG_RM=y
 CONFIG_RMDIR=y
 CONFIG_SEQ=y
-# CONFIG_SHRED is not set
+CONFIG_SHRED=y
 CONFIG_SHUF=y
 CONFIG_SLEEP=y
 CONFIG_FEATURE_FANCY_SLEEP=y
