--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -42,7 +42,7 @@ CONFIG_BUSYBOX_EXEC_PATH=""
 #
 # Build Options
 #
-CONFIG_STATIC=y
+# CONFIG_STATIC is not set
 # CONFIG_PIE is not set
 # CONFIG_NOMMU is not set
 # CONFIG_BUILD_LIBBUSYBOX is not set
