--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -380,7 +380,7 @@ CONFIG_DEFAULT_SETFONT_DIR=""
 #
 # Debian Utilities
 #
-# CONFIG_PIPE_PROGRESS is not set
+CONFIG_PIPE_PROGRESS=y
 # CONFIG_RUN_PARTS is not set
 # CONFIG_FEATURE_RUN_PARTS_LONG_OPTIONS is not set
 # CONFIG_FEATURE_RUN_PARTS_FANCY is not set
