--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.29.0.git
-# Wed Feb  7 15:11:44 2018
+# Thu Mar 15 10:05:34 2018
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -478,6 +478,7 @@ CONFIG_FEATURE_XARGS_SUPPORT_ARGS_FILE=y
 # CONFIG_HALT is not set
 # CONFIG_POWEROFF is not set
 # CONFIG_REBOOT is not set
+# CONFIG_FEATURE_WAIT_FOR_INIT is not set
 # CONFIG_FEATURE_CALL_TELINIT is not set
 CONFIG_TELINIT_PATH=""
 # CONFIG_INIT is not set
@@ -904,7 +905,7 @@ CONFIG_NC_SERVER=y
 # CONFIG_PSCAN is not set
 # CONFIG_ROUTE is not set
 # CONFIG_SLATTACH is not set
-# CONFIG_SSL_CLIENT is not set
+CONFIG_SSL_CLIENT=y
 # CONFIG_TC is not set
 # CONFIG_FEATURE_TC_INGRESS is not set
 # CONFIG_TCPSVD is not set
@@ -923,7 +924,7 @@ CONFIG_NC_SERVER=y
 # CONFIG_FEATURE_TFTP_PUT is not set
 # CONFIG_FEATURE_TFTP_BLOCKSIZE is not set
 # CONFIG_TFTP_DEBUG is not set
-# CONFIG_TLS is not set
+CONFIG_TLS=y
 # CONFIG_TRACEROUTE is not set
 # CONFIG_TRACEROUTE6 is not set
 # CONFIG_FEATURE_TRACEROUTE_VERBOSE is not set
@@ -934,9 +935,9 @@ CONFIG_NC_SERVER=y
 CONFIG_WGET=y
 CONFIG_FEATURE_WGET_LONG_OPTIONS=y
 # CONFIG_FEATURE_WGET_STATUSBAR is not set
-# CONFIG_FEATURE_WGET_AUTHENTICATION is not set
+CONFIG_FEATURE_WGET_AUTHENTICATION=y
 # CONFIG_FEATURE_WGET_TIMEOUT is not set
-# CONFIG_FEATURE_WGET_HTTPS is not set
+CONFIG_FEATURE_WGET_HTTPS=y
 # CONFIG_FEATURE_WGET_OPENSSL is not set
 CONFIG_WHOIS=y
 # CONFIG_ZCIP is not set
