--- a/win32/Kbuild
+++ b/win32/Kbuild
@@ -13,8 +13,8 @@ lib-y += mingw.o
 lib-y += process.o
 lib-y += regex.o
 lib-y += net.o
+lib-y += inet_pton.o
 lib-y += popen.o
-lib-y += mempcpy.o
 lib-y += mntent.o
 lib-y += statfs.o
 lib-y += strptime.o
