--- a/win32/Kbuild
+++ b/win32/Kbuild
@@ -7,18 +7,19 @@ lib-y:=
 lib-$(CONFIG_PLATFORM_MINGW32) += env.o
 lib-$(CONFIG_PLATFORM_MINGW32) += fnmatch.o
 lib-$(CONFIG_PLATFORM_MINGW32) += fsync.o
+lib-$(CONFIG_PLATFORM_MINGW32) += inet_pton.o
 lib-$(CONFIG_PLATFORM_MINGW32) += ioctl.o
-lib-$(CONFIG_PLATFORM_MINGW32) += isaac.o
+lib-$(CONFIG_FEATURE_PRNG_ISAAC) += isaac.o
 lib-$(CONFIG_PLATFORM_MINGW32) += mingw.o
 lib-$(CONFIG_PLATFORM_MINGW32) += process.o
-lib-$(CONFIG_PLATFORM_MINGW32) += regex.o
-lib-$(CONFIG_PLATFORM_MINGW32) += net.o
-lib-$(CONFIG_PLATFORM_MINGW32) += inet_pton.o
-lib-$(CONFIG_PLATFORM_MINGW32) += poll.o
-lib-$(CONFIG_PLATFORM_MINGW32) += select.o
-lib-$(CONFIG_PLATFORM_MINGW32) += popen.o
-lib-$(CONFIG_PLATFORM_MINGW32) += statfs.o
 lib-$(CONFIG_PLATFORM_MINGW32) += mntent.o
+lib-$(CONFIG_PLATFORM_MINGW32) += net.o
+lib-$(CONFIG_PLATFORM_MINGW32) += poll.o
+lib-$(CONFIG_PLATFORM_MINGW32) += popen.o
+lib-$(CONFIG_PLATFORM_MINGW32) += regex.o
+lib-$(CONFIG_PLATFORM_MINGW32) += select.o
+lib-$(CONFIG_FEATURE_PRNG_SHELL) += sh_random.o
+lib-$(CONFIG_PLATFORM_MINGW32) += statfs.o
 lib-$(CONFIG_PLATFORM_MINGW32) += strptime.o
 lib-$(CONFIG_PLATFORM_MINGW32) += system.o
 lib-$(CONFIG_PLATFORM_MINGW32) += termios.o
