--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.29.0.git
-# Thu Mar 15 10:21:09 2018
+# Tue Mar 27 11:35:09 2018
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -19,7 +19,6 @@ CONFIG_SHOW_USAGE=y
 CONFIG_FEATURE_VERBOSE_USAGE=y
 CONFIG_FEATURE_COMPRESS_USAGE=y
 CONFIG_LFS=y
-# CONFIG_GLOBBING is not set
 # CONFIG_PAM is not set
 # CONFIG_FEATURE_DEVPTS is not set
 # CONFIG_FEATURE_UTMP is not set
@@ -38,6 +37,13 @@ CONFIG_BUSYBOX_EXEC_PATH=""
 # CONFIG_FEATURE_CLEAN_UP is not set
 # CONFIG_FEATURE_SYSLOG is not set
 # CONFIG_PLATFORM_LINUX is not set
+# CONFIG_GLOBBING is not set
+CONFIG_FEATURE_PRNG_SHELL=y
+# CONFIG_FEATURE_PRNG_ISAAC is not set
+CONFIG_FEATURE_ICON=y
+# CONFIG_FEATURE_ICON_ATERM is not set
+# CONFIG_FEATURE_ICON_STERM is not set
+CONFIG_FEATURE_ICON_ALL=y
 
 #
 # Build Options
