Add a VERSIONINFO resource to the binary
If icons are enabled we might as well store some version information.

The string manipulation is based on this:

https://stackoverflow.com/questions/8540485/how-do-i-split-a-string-in-make

Closes issue #108.

--- a/win32/icon/icon.rc
+++ b/win32/icon/icon.rc
@@ -6,3 +6,27 @@
 #if CONFIG_FEATURE_ICON_STERM || CONFIG_FEATURE_ICON_ALL
 2 ICON "sterm.ico"
 #endif
+
+1 VERSIONINFO
+FILEVERSION     BB_VERSION,BB_PATCHLEVEL,BB_SUBLEVEL,BB_EXTRAVERSION
+PRODUCTVERSION  BB_VERSION,BB_PATCHLEVEL,BB_SUBLEVEL,BB_EXTRAVERSION
+BEGIN
+  BLOCK "StringFileInfo"
+  BEGIN
+    BLOCK "080904E4"
+    BEGIN
+      VALUE "CompanyName", "frippery.org"
+      VALUE "FileDescription", "BusyBox multi-call binary"
+      VALUE "FileVersion", BB_VER
+      VALUE "InternalName", "busybox"
+      VALUE "LegalCopyright", "(C) 1998-2018 Many authors"
+      VALUE "OriginalFilename", "busybox.exe"
+      VALUE "ProductName", "busybox-w32"
+      VALUE "ProductVersion", BB_VER
+    END
+  END
+  BLOCK "VarFileInfo"
+  BEGIN
+    VALUE "Translation", 0x809, 1252
+  END
+END
