ttysize: enable in default configuration
Previously

   $ HEIGHT=$(ttysize h)

would always return a default height of 24 because stdout wasn't
connected to a console.  Now that get_terminal_width_height also
checks stderr the above works.

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -802,7 +802,7 @@ CONFIG_MAN=y
 # CONFIG_SETSERIAL is not set
 CONFIG_STRINGS=y
 # CONFIG_TIME is not set
-# CONFIG_TTYSIZE is not set
+CONFIG_TTYSIZE=y
 # CONFIG_UBIRENAME is not set
 # CONFIG_UBIATTACH is not set
 # CONFIG_UBIDETACH is not set
