--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -802,7 +802,7 @@ CONFIG_MAN=y
 # CONFIG_SETSERIAL is not set
 CONFIG_STRINGS=y
 # CONFIG_TIME is not set
-# CONFIG_TTYSIZE is not set
+CONFIG_TTYSIZE=y
 # CONFIG_UBIRENAME is not set
 # CONFIG_UBIATTACH is not set
 # CONFIG_UBIDETACH is not set
