ps: obtain applet names from other BusyBox processes
Remove the code which passed applet names to child processes using
environment variables.  This only allowed ps to display names for
its ancestors.

Instead attempt to read applet names from the memory of unrelated
processes.

The Microsoft documentation alone wasn't enough to figure out how
to do this.  Additional hints from:

  https://stackoverflow.com/questions/4298331/exe-or-dll-image-base-address
  https://stackoverflow.com/questions/14467229/get-base-address-of-process

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -126,7 +126,7 @@ endif
 ifeq ($(CONFIG_PLATFORM_MINGW32),y)
 CFLAGS += -Iwin32 -DHAVE_STRING_H=1 -DHAVE_CONFIG_H=0 -fno-builtin-stpcpy -fno-ident
 EXEEXT = .exe
-LDLIBS += userenv ws2_32
+LDLIBS += userenv psapi ws2_32
 endif
 
 # Android has no separate crypt library
