--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -429,7 +429,7 @@ CONFIG_FEATURE_VI_READONLY=y
 CONFIG_FEATURE_VI_SETOPTS=y
 CONFIG_FEATURE_VI_SET=y
 CONFIG_FEATURE_VI_WIN_RESIZE=y
-CONFIG_FEATURE_VI_ASK_TERMINAL=y
+# CONFIG_FEATURE_VI_ASK_TERMINAL is not set
 CONFIG_FEATURE_VI_UNDO=y
 CONFIG_FEATURE_VI_UNDO_QUEUE=y
 CONFIG_FEATURE_VI_UNDO_QUEUE_MAX=256
