--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -288,7 +288,7 @@ CONFIG_PRINTF=y
 CONFIG_PWD=y
 # CONFIG_READLINK is not set
 # CONFIG_FEATURE_READLINK_FOLLOW is not set
-# CONFIG_REALPATH is not set
+CONFIG_REALPATH=y
 CONFIG_RM=y
 CONFIG_RMDIR=y
 CONFIG_SEQ=y
