--- a/win32/icon/icon.rc
+++ b/win32/icon/icon.rc
@@ -1,12 +1,13 @@
 #include "../../include/autoconf.h"
 
-#if CONFIG_FEATURE_ICON_ATERM || CONFIG_FEATURE_ICON_ALL
+#if ENABLE_FEATURE_ICON_ATERM || ENABLE_FEATURE_ICON_ALL
 1 ICON "aterm.ico"
 #endif
-#if CONFIG_FEATURE_ICON_STERM || CONFIG_FEATURE_ICON_ALL
+#if ENABLE_FEATURE_ICON_STERM || ENABLE_FEATURE_ICON_ALL
 2 ICON "sterm.ico"
 #endif
 
+#if ENABLE_FEATURE_VERSIONINFO
 1 VERSIONINFO
 FILEVERSION     BB_VERSION,BB_PATCHLEVEL,BB_SUBLEVEL,BB_EXTRAVERSION
 PRODUCTVERSION  BB_VERSION,BB_PATCHLEVEL,BB_SUBLEVEL,BB_EXTRAVERSION
@@ -30,5 +31,8 @@ BEGIN
     VALUE "Translation", 0x809, 1252
   END
 END
+#endif
 
+#if ENABLE_FEATURE_MANIFEST
 1 RT_MANIFEST "busybox-w32.manifest"
+#endif
