--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.29.0.git
-# Sun May 13 08:24:17 2018
+# Tue Jul 24 16:29:13 2018
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -40,6 +40,9 @@ CONFIG_BUSYBOX_EXEC_PATH=""
 # CONFIG_GLOBBING is not set
 CONFIG_FEATURE_PRNG_SHELL=y
 # CONFIG_FEATURE_PRNG_ISAAC is not set
+CONFIG_FEATURE_RESOURCES=y
+CONFIG_FEATURE_VERSIONINFO=y
+CONFIG_FEATURE_MANIFEST=y
 CONFIG_FEATURE_ICON=y
 # CONFIG_FEATURE_ICON_ATERM is not set
 # CONFIG_FEATURE_ICON_STERM is not set
