Allow build objects to go to a separate directory
Fix the build system so the KBUILD_OUTPUT environment variable can be
used as intended:  to specify that object files are placed in a separate
directory from the source.

Also ensure that busybox-w32.manifest is deleted by 'make mrproper'.

--- a/win32/resources/resources.rc
+++ b/win32/resources/resources.rc
@@ -1,4 +1,4 @@
-#include "../../include/autoconf.h"
+#include <autoconf.h>
 
 #if ENABLE_FEATURE_ICON_ATERM || ENABLE_FEATURE_ICON_ALL
 1 ICON "aterm.ico"
